Modify markdown syntax