@@ -16,13 +16,19 @@
 package com.mammb.code.editor.core.syntax;
 
 import com.mammb.code.editor.core.text.Style;
+import com.mammb.code.editor.core.syntax.BlockScopes.BlockType;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 /**
  * The Markdown syntax.
  * @author Naotsugu Kobayashi
  */
 public class MarkdownSyntax implements Syntax {
+
+    private final BlockScopes scopes = new BlockScopes();
 
     @Override
     public String name() {
@@ -31,6 +37,32 @@ public class MarkdownSyntax implements Syntax {
 
     @Override
     public List<Style.StyleSpan> apply(int row, String text) {
-        return List.of();
+
+        if (text == null || text.isBlank()) {
+            return Collections.emptyList();
+        }
+
+        var spans = new ArrayList<Style.StyleSpan>();
+        var source = LexerSource.of(row, text);
+
+        while (source.hasNext()) {
+
+            var peek = source.peek();
+            char ch = peek.ch();
+            Optional<BlockType> block = scopes.inScope(source.row(), peek.index());
+            Optional<BlockType> fence = block.filter(t -> t.open().startsWith("```"));
+
+            if (fence.isPresent()) {
+                Syntax syntax = (Syntax) fence.get().attribute();
+                return syntax.apply(row, text);
+            }
+            if (ch == '`' && source.match("```")) {
+                var s = source.nextRemaining();
+                Syntax syntax = Syntax.of(s.string().substring(3).trim());
+                scopes.putNeutral(source.row(), s.index(), BlockType.neutral("```", syntax));
+            }
+            source.commitPeek();
+        }
+        return spans;
     }
 }
